support throttling saml2  endopoints; remove deprecated elements