@@ -15,7 +15,7 @@ import org.springframework.http.HttpStatus;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.security.cert.X509Certificate;
 import java.util.concurrent.RejectedExecutionException;
@@ -78,7 +78,7 @@ class SimpleHttpClientTests {
             try (val webServer = new MockWebServer(8165,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.OK)) {
                 webServer.start();
-                val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:8165"));
+                val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:8165").toURL());
                 assertNotNull(result);
             }
         }
@@ -88,14 +88,14 @@ class SimpleHttpClientTests {
             try (val webServer = new MockWebServer(8166,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.INTERNAL_SERVER_ERROR)) {
                 webServer.start();
-                val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:8166"));
+                val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:8166").toURL());
                 assertNull(result);
             }
         }
 
         @Test
         void verifyMessageNotSent() throws Exception {
-            val result = getHttpClient().sendMessageToEndPoint(new URL("http://localhost:1234"));
+            val result = getHttpClient().sendMessageToEndPoint(new URI("http://localhost:1234").toURL());
             assertNull(result);
         }
 
@@ -132,7 +132,7 @@ class SimpleHttpClientTests {
             try (val webServer = new MockWebServer(8099,
                 new ByteArrayResource(StringUtils.EMPTY.getBytes(StandardCharsets.UTF_8), "Output"), HttpStatus.INTERNAL_SERVER_ERROR)) {
                 webServer.start();
-                val result = getHttpClient().isValidEndPoint(new URL("http://localhost:8099"));
+                val result = getHttpClient().isValidEndPoint(new URI("http://localhost:8099").toURL());
                 assertFalse(result);
             }
         }
@@ -150,7 +150,7 @@ class SimpleHttpClientTests {
             clientFactory.setHostnameVerifier(new NoopHostnameVerifier());
             clientFactory.setAcceptableCodes(CollectionUtils.wrapList(200, 403));
             val client = clientFactory.getObject();
-            val msg = new HttpMessage(new URL("https://localhost:9859/post"), "{'name' : 'value'}", false);
+            val msg = new HttpMessage(new URI("https://localhost:9859/post").toURL(), "{'name' : 'value'}", false);
             val result = client.sendMessageToEndPoint(msg);
             assertTrue(result);
         }
